adding new file

--- a/base/mysql/deployment.yaml
+++ b/base/mysql/deployment.yaml
@@ -43,15 +43,7 @@ spec:
           limits:
             memory: "1Gi"
             cpu: "500m"
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mysql-pvc
-  namespace: mern-stack
-spec:
-  accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
+      volumes:
+      - name: mysql-storage
+        persistentVolumeClaim:
+          claimName: mysql-pvc
