--- a/base/backend/deployment.yaml
+++ b/base/backend/deployment.yaml
@@ -24,10 +24,7 @@ spec:
         - name: DB_USER
           value: "myuser"
         - name: DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-secret
-              key: password
+          value: "mypassword"
         - name: DB_DATABASE
           value: "crud_operations"
         - name: NODE_ENV
@@ -39,9 +36,3 @@ spec:
           limits:
             memory: "512Mi"
             cpu: "500m"
-        livenessProbe:
-          httpGet:
-            path: /api/health
-            port: 3000
-          initialDelaySeconds: 30
-          periodSeconds: 10
