--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,13 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
+namespace: mern-stack
+
 resources:
   - namespace.yaml
   - mysql/secret.yaml
+  - mysql/pvc.yaml
   - mysql/deployment.yaml
   - mysql/service.yaml
   - backend/deployment.yaml
   - backend/service.yaml
   - frontend/deployment.yaml
   - frontend/service.yaml
-
-namespace: mern-stack
